# holyrig

./: .gitignore  Cargo.toml
auto-dispatch/: Cargo.toml
auto-dispatch/src/: auto_dispatch.rs  lib.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md  roadmap.md
book/src/implementation/: omnirig_analysis.md
book/src/specs/: README.md  model_file.md  protocol.md  rig_file.md  schema_file.md  schema_files.md  schema_parser.md
com-example/: Cargo.toml
com-example/src/: main.rs  simple_object.rs  sub_object.rs
docs/: plan.md  rig_format.md  rig_format.toml  schema.toml
holyrig/: Cargo.toml
holyrig/src/: data_format.rs  lib.rs  main.rs  resources.rs
holyrig/src/interfaces/: mod.rs  rigctld.rs  udp_server.rs
holyrig/src/interfaces/jsonrpc/: error.rs  handler.rs  methods.rs  mod.rs  server.rs  types.rs
holyrig/src/interfaces/transport/: mod.rs  udp.rs
holyrig/src/runtime/: interpreter.rs  mod.rs  parser.rs  parser_errors.rs  semantic_analyzer.rs
holyrig/src/serial/: device.rs  manager.rs
omnirig/: Cargo.toml
omnirig/src/: enums.rs  lib.rs  main.rs  omnirig.rs  port_bits.rs  registry.rs  registry_backup.rs  rig.rs
rigs/: IC-7300.rig  IC-7300.toml  IC7300.rig
schema/: transceiver.schema  transceiver.toml
src/: commands.rs  data_format.rs  gui.rs  interpreter.rs  lib.rs  main.rs  main_window.rs  messaging.rs  omnirig_parser.rs  parser.rs  parser_errors.rs  rig.rs  rig_api.rs  rig_file.rs  rigctld.rs  schema.rs  schema_parser.rs  semantic_analyzer.rs  serial_manager.rs  translator.rs  udp_server.rs  wrapper.rs
src/interfaces/: mod.rs  omnirig.rs  rigctld.rs
src/runtime/: parser.rs  schema_parser.rs  wrapper.rs
src/serial/: device.rs  manager.rs  mod.rs
