[package]
name = "holyrig"
version = "0.1.0"
edition = "2024"
default-run = "holyrig"

[lib]
name = "holyrig"
path = "src/lib.rs"

[[bin]]
name = "holyrig"
path = "src/main.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[dependencies]
anyhow = "1.0.97"
argh = "0.1.12"
async-trait = "0.1.77"
configparser = "3.1.0"
dirs = "6.0"
eframe = "0.32.0"
egui = "0.32.0"
egui_dock = "0.17.0"
logos = "0.15.1"
parking_lot = "0.12.4"
peg = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-serial = "5.4.4"
toml = "0.8.20"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[target.x86_64-pc-windows-gnu.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Com", "Win32_System_Ole"] }
windows-core = "0.62.0"
windows-implement = "0.60.0"
