[package]
name = "com-example"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Variant", "Win32_UI_WindowsAndMessaging"] }
auto-dispatch = { path = "../auto-dispatch" }
ctrlc = "3.4"
windows-core = "0.62.2"


